Refactoring some tests namespaces + added missing tests to groups

--- a/documentation/testdox.html
+++ b/documentation/testdox.html
@@ -97,17 +97,17 @@
             <li style="color: #555753;">✓ User is created empty</li>
             <li style="color: #555753;">✓ User has all fields filled</li>
         </ul>
-        <h2 id="Blog\Domain\Validators\DataObject\EmailValidatorTest">Blog\Domain\Validators\DataObject\EmailValidator</h2>
+        <h2 id="Blog\Tests\Domain\Validators\DataObject\Email\EmailValidatorTest">Blog\Tests\Domain\Validators\DataObject\Email\EmailValidator</h2>
         <ul>
             <li style="color: #555753;">✓ Email is valid</li>
             <li style="color: #555753;">✓ Invalid email format </li>
         </ul>
-        <h2 id="Blog\Tests\Domain\Validators\DataObject\PersonNameValidatorTest">Blog\Tests\Domain\Validators\DataObject\PersonNameValidator</h2>
+        <h2 id="Blog\Tests\Domain\Validators\DataObject\Post\PersonNameValidatorTest">Blog\Tests\Domain\Validators\DataObject\Post\PersonNameValidator</h2>
         <ul>
             <li style="color: #555753;">✓ Person name is valid</li>
             <li style="color: #555753;">✓ Person name needs at least first name</li>
         </ul>
-        <h2 id="Blog\Tests\Domain\Validators\DataObject\UserNameValidatorTest">Blog\Tests\Domain\Validators\DataObject\UserNameValidator</h2>
+        <h2 id="Blog\Tests\Domain\Validators\DataObject\Post\UserNameValidatorTest">Blog\Tests\Domain\Validators\DataObject\Post\UserNameValidator</h2>
         <ul>
             <li style="color: #555753;">✓ Person name is valid</li>
             <li style="color: #555753;">✓ Person name needs at least first name</li>
