fix: renamed UserNameValidatorTest functions

--- a/documentation/testdox.html
+++ b/documentation/testdox.html
@@ -109,8 +109,8 @@
         </ul>
         <h2 id="Blog\Tests\Domain\Validators\DataObject\Post\UserNameValidatorTest">Blog\Tests\Domain\Validators\DataObject\Post\UserNameValidator</h2>
         <ul>
-            <li style="color: #555753;">✓ Person name is valid</li>
-            <li style="color: #555753;">✓ Person name needs at least first name</li>
+            <li style="color: #555753;">✓ User name is valid</li>
+            <li style="color: #555753;">✓ User name needs first name</li>
         </ul>
         <h2 id="Blog\Tests\Domain\Validators\Post\CreatePostValidatorTest">Blog\Tests\Domain\Validators\Post\CreatePostValidator</h2>
         <ul>
